src/objects/MUSW__RESTSettingFields_Pull__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Specifies field mappings for REST services defined in REST Settings (pull requests)</description>
    <fields>
        <fullName>MUSW__Mapped_Field_Name__c</fullName>
        <label>Mapped Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Mapped_Object_Name__c</fullName>
        <label>Mapped Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__REST_Setting_Name__c</fullName>
        <label>REST Setting Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Transform_Instructions__c</fullName>
        <label>Transform Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Traverse_Instructions__c</fullName>
        <label>Traverse Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the setting is included in the POST Request</description>
        <inlineHelpText>Determines if the setting is included in the POST Request</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__isId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unique Identifier</label>
        <type>Checkbox</type>
    </fields>
    <label>REST Setting Fields - Pull</label>
</CustomObject>